force-app/main/default/objects/BGBL__Batch_Letter_Job__c/BGBL__Batch_Letter_Job__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Letter job stats</description>
    <label>Letter Job</label>
    <nameField>
        <displayFormat>BLJ-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letter Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>