force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Batch_Letter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Letter</label>
    <referenceTo>BGBL__Batch_Letter__c</referenceTo>
    <relationshipName>Batch_Run_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>