force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Child_Iterate_Ids__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Child_Iterate_Ids__c</fullName>
    <inlineHelpText>Record id's to filter children record results further</inlineHelpText>
    <label>Child Iterate Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>