force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__End_Time__c.field-meta.xml
<CustomField>
    <fullName>BGBL__End_Time__c</fullName>
    <label>Completed Time</label>
    <type>DateTime</type>
</CustomField>