force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__HasChildIds__c.field-meta.xml
<CustomField>
    <fullName>BGBL__HasChildIds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasChildIds</label>
    <type>Checkbox</type>
</CustomField>