force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Override_Parameters__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Override_Parameters__c</fullName>
    <label>Override Parameters</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>