force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Parent_Query_Ids__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Parent_Query_Ids__c</fullName>
    <description>string and comma delimited list of id's to restrict first letter query (the parent query) by using the IN clause.</description>
    <inlineHelpText>Used internally by batch and single requests to specify which parent records to work within the un-scoped first/parent applied letter query.</inlineHelpText>
    <label>Parent Query Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>