force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Print_File__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Print_File__c</fullName>
    <formula>IF( BGBL__Single_Letter_Job__c == true || ( BGBL__Save_Batch_Letter__c == true &amp;&amp; BGBL__Single_Letter_Job__c == false), 
	IF(BGBL__Print_File_Name__c = "", "-- not available --", 
		IF(BGBL__Single_Letter_Job__c == true, 
			IF(BGBL__Single_Letter_Job__c == true,HYPERLINK(BGBL__Print_File_Name__c , "click to view", "_top"),'' )
			, 
			IF(contains($Setup.BGBL__Letter_Single__c.BGBL__Letter_Request_Endpoint__c, "test"), 
				HYPERLINK("https://lettertest.mybasicgov.com/mergedoc/" &amp; BGBL__Print_File_Name__c ,"click to view", "_blank"), 
				IF(contains($Setup.BGBL__Letter_Single__c.BGBL__Letter_Request_Endpoint__c, "staging"),
					HYPERLINK("https://stagingletterbatch.mybasicgov.com/mergedoc/" &amp; BGBL__Print_File_Name__c , "click to view", "_top"), 
					HYPERLINK("https://letterbatch.mybasicgov.com/mergedoc/" &amp; BGBL__Print_File_Name__c , "click to view", "_top") 
				) 
			) 
		) 
	), '' 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print File</label>
    <type>Text</type>
</CustomField>