force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Print_File_Location__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Print_File_Location__c</fullName>
    <label>Print File Location</label>
    <type>Url</type>
</CustomField>