force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Recipients__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Recipients__c</fullName>
    <inlineHelpText>comma delimited list of contact ids up to a max of 2000 to have letter copies. Minimum 1 contact id.</inlineHelpText>
    <label>Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>