force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Single_Letter_Job__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Single_Letter_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only one letter in this job</inlineHelpText>
    <label>Single</label>
    <type>Checkbox</type>
</CustomField>