force-app/main/default/objects/BGBL__Batch_Letter_Job__c/fields/BGBL__Submit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Submit_DateTime__c</fullName>
    <description>Date and time that the Letter Job is scheduled to be submitted. Use cases: to refresh API session id for long queues eg. > 4 hours or re-sending failed jobs.</description>
    <inlineHelpText>If still in 'In Queue', date and time in which job gets submitted. Sent immediately if this is blank.</inlineHelpText>
    <label>Submit Time</label>
    <type>DateTime</type>
</CustomField>